--- a/src/app/past-menu/past-menu.page.html
+++ b/src/app/past-menu/past-menu.page.html
@@ -51,18 +51,18 @@
                             </ion-item>
                             <ion-item lines="none">
                                 <ion-item class="firstitem" lines="inset">
-                                    <ion-label position="floating">{{entry.item1}}</ion-label>
+                                    <ion-label>{{entry.item1}}</ion-label>
                                 </ion-item>
                                 <ion-item slot = "end" lines="inset">
-                                    <ion-label position="floating">{{entry.item1_cost}}</ion-label>
+                                    <ion-label>{{entry.item1_cost}}</ion-label>
                                 </ion-item>
                             </ion-item>
                             <ion-item lines="none">
                                 <ion-item class="firstitem" lines="inset">
-                                    <ion-label position="floating">{{entry.item2}}</ion-label>
+                                    <ion-label>{{entry.item2}}</ion-label>
                                 </ion-item>
                                 <ion-item slot = "end" lines="inset"> 
-                                    <ion-label position="floating">{{entry.item1_cost}}</ion-label>
+                                    <ion-label>{{entry.item2_cost}}</ion-label>
                                 </ion-item>
                             </ion-item>
                         </ion-list>
