Update to start linking with server #2

--- a/src/app/fill-order/fill-order.page.html
+++ b/src/app/fill-order/fill-order.page.html
@@ -32,7 +32,7 @@
             TODAY'S MENU
         </ion-label>
         <ion-label class="date">
-            Date: 13/03/1999 <!--Use date obj-->
+            Date: {{text_date[8]}}{{text_date[9]}} {{text_date[4]}}{{text_date[5]}}{{text_date[6]}} {{text_date[11]}}{{text_date[12]}}{{text_date[13]}}{{text_date[14]}}
         </ion-label>
     </ion-item>
 
