--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
           </ion-item>
           <ion-item class="seconditem">
               <ion-label position="floating">Password:</ion-label>
-              <ion-input [(ngModel)]="password" type="password"></ion-input>
+              <ion-input [(ngModel)]="password" type="password" clearOnEdit=false></ion-input>
           </ion-item>
        </ion-list>
       <ion-button color="primary" fill="solid" (click)="login()">
