--- a/src/app/past-menu/past-menu.page.html
+++ b/src/app/past-menu/past-menu.page.html
@@ -1,29 +1,5 @@
 <ion-header>
-  <ion-toolbar>
-        <ion-item lines="none">
-                <div class="chefico" (click)="viewButtons()"></div>
-                <ion-button color="primary" size="default" fill="solid" (click)="createMenu()">
-                    <ion-ripple-effect></ion-ripple-effect>
-                    Create New Menu
-                </ion-button>
-                <ion-button color="primary" size="default" fill="solid" (click)="viewOrders()">
-                    <ion-ripple-effect></ion-ripple-effect>
-                    View Orders
-                </ion-button>
-                <ion-button color="primary" size="default" fill="solid" (click)="viewMenu()">
-                    <ion-ripple-effect></ion-ripple-effect>
-                    View Past Menu
-                </ion-button>
-                <ion-button color="primary" size="default" fill="solid" (click)="viewMonthlySummary()">
-                    <ion-ripple-effect></ion-ripple-effect>
-                    Monthly Summary
-                </ion-button>
-                <ion-button slot="end" color="warning" size="default" fill="solid" (click)="logout()">
-                    <ion-ripple-effect></ion-ripple-effect>
-                    Log Out
-                </ion-button>
-            </ion-item>
-  </ion-toolbar>
+  <app-toolbar></app-toolbar>
 </ion-header>
 
 <ion-content padding>
@@ -69,7 +45,7 @@
               </ion-col>
             </ion-row>
     </ion-grid>
-        <ion-button class="backbutton" color="warning" size="default" fill="solid" (click)="goBack()">
+        <ion-button class="backbutton" color="warning" size="default" fill="solid" (click)="viewButtons()">
                 BACK
         </ion-button>
 </ion-content>
