--- a/src/app/summary/summary.page.scss
+++ b/src/app/summary/summary.page.scss
@@ -1,18 +1,12 @@
-.chefico{
-    width: 38.6px;
-    height: 39.6px;
-    background: #fff url('../../assets/images/chefico.png') no-repeat center center / cover;
-    margin-inline-end: 20px;
-    cursor: pointer;
-}
 mat-form-field{
     margin-inline-start: 30px;
     margin-inline-end: 30px;
 }
-.calenderico{
-    width: 24px;
-    height: 24px;
-    background: #fff url('../../assets/images/calendarico.png') no-repeat center center / cover;
+.searchbar{
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
 }
 table{
     font-size: 11px;
@@ -22,20 +16,23 @@ table{
     border: 1px solid black;
 }
 th, td {
-    padding: 5px;
+    padding: 3px;
     border: 1px solid black
+}
+.card{
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x: auto;
+    overflow-y: auto;
+    text-align: center;
 }
 .studentcard{
     width: 35%;
-    margin-left: auto;
-    margin-right: auto;
-    border-top: 2px solid rgb(0, 162, 255);
+    max-height: 70%;
 }
 .itemcard{
     width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    border-top: 2px solid rgb(0, 162, 255);
+    max-height: 70%;
 }
 ion-note{
     --color:black;
