--- a/src/app/past-menu/past-menu.page.html
+++ b/src/app/past-menu/past-menu.page.html
@@ -45,7 +45,7 @@
               </ion-col>
             </ion-row>
     </ion-grid>
-        <ion-button class="backbutton" color="warning" size="default" fill="solid" (click)="viewButtons()">
+        <ion-button color="warning" size="default" fill="solid" (click)="viewButtons()">
                 BACK
         </ion-button>
 </ion-content>
