--- a/src/app/summary/summary.page.scss
+++ b/src/app/summary/summary.page.scss
@@ -1,3 +1,10 @@
+ion-content{
+    overflow-y: hidden;
+}
+.head{
+    margin-inline-start: 40%;
+    font-size: 30px;
+}
 mat-form-field{
     margin-inline-start: 30px;
     margin-inline-end: 30px;
@@ -6,7 +13,9 @@ mat-form-field{
     width: 40%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+}
+.baritem{
+    margin-top: -20px;
 }
 table{
     font-size: 11px;
@@ -30,8 +39,14 @@ th, td {
     width: 35%;
     max-height: 70%;
 }
+.regnums{
+    cursor: pointer;
+}
+.regnums:hover{
+    background: rgb(231, 231, 231);
+}
 .itemcard{
-    width: 70%;
+    width: 50%;
     max-height: 70%;
 }
 ion-note{
