--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -19,7 +19,7 @@
         </ion-button>
         <ion-button color="primary" size="default" fill="solid" (click)="viewOrderHistory()">
             <ion-ripple-effect></ion-ripple-effect>
-            Order History
+            Student History
         </ion-button>
         <ion-button slot="end" color="warning" size="default" fill="solid" (click)="logout()">
             <ion-ripple-effect></ion-ripple-effect>
