--- a/src/app/fill-order/fill-order.page.scss
+++ b/src/app/fill-order/fill-order.page.scss
@@ -13,12 +13,20 @@ ion-list{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 40px;
-    --border-bottom: 2px;
-    width: 90%;
+    width: 60%;
+}
+ion-card{
+    margin-top:0px;
+    margin-bottom: 0px;
+    padding-bottom:20px;
 }
 .itemhead{
     font-size: 20px;
-    --background:rgb(0, 162, 255);
+    --background:white;
+    border-bottom: 2px solid rgb(0, 162, 255);
+}
+.headlabel{
+    margin-left: 30px;
 }
 .firstitem{
     width: 70%;
