--- a/src/app/order-history/order-history.page.html
+++ b/src/app/order-history/order-history.page.html
@@ -5,7 +5,7 @@
 <ion-content padding>
   <ion-item lines="none">  
     <ion-label class="head">
-        ORDER HISTORY
+        STUDENT HISTORY
     </ion-label>
   </ion-item>
   <ion-searchbar [(ngModel)]="searchnumber" color="light" placeholder="Register Number" type="number"></ion-searchbar>
