--- a/src/app/past-menu/past-menu.page.html
+++ b/src/app/past-menu/past-menu.page.html
@@ -12,7 +12,7 @@
               <ion-col>
                <div class="calendar">
                     <mat-form-field>
-                        <input matInput [matDatepicker]="myDatepicker" [(ngModel)]="picker_date" (dateChange)="updatePage()" placeholder="Select a Date">
+                        <input matInput [matDatepicker]="myDatepicker" [(ngModel)]="picker_date" min="2019-04-01" [max]="maxdate" (dateChange)="updatePage()" placeholder="Select a Date">
                         <mat-datepicker-toggle matSuffix [for]="myDatepicker">
                             <div class="calenderico" matDatepickerToggleIcon></div>
                         </mat-datepicker-toggle>
@@ -27,7 +27,7 @@
                                 <ion-icon color="light" name="{{entry.icon}}"></ion-icon>
                                 <ion-label class="headlabel">{{entry.mealname}}</ion-label>
                             </ion-item>
-                            <ion-item lines="none">
+                            <ion-item *ngIf="entry.item1" lines="none">
                                 <ion-item class="firstitem" lines="inset">
                                     <ion-label>{{entry.item1}}</ion-label>
                                 </ion-item>
@@ -35,7 +35,7 @@
                                     <ion-label *ngIf="entry.item1_cost">Rs. {{entry.item1_cost}}</ion-label>
                                 </ion-item>
                             </ion-item>
-                            <ion-item lines="none">
+                            <ion-item *ngIf="entry.item2" lines="none">
                                 <ion-item class="firstitem" lines="inset">
                                     <ion-label>{{entry.item2}}</ion-label>
                                 </ion-item>
