Paused for moving... (UNSTABLE VERSION)

--- a/src/app/buttons/buttons.page.html
+++ b/src/app/buttons/buttons.page.html
@@ -69,7 +69,7 @@
         <ion-col>
           <ion-card [class.startgrow]="growflag">
             <ion-card-header>
-              Unknown
+              Manage Items
               </ion-card-header>
             <ion-card-content>
               <div class="iconpos">X</div>
