--- a/src/app/fill-order/fill-order.page.scss
+++ b/src/app/fill-order/fill-order.page.scss
@@ -15,6 +15,9 @@ ion-list{
     margin-bottom: 40px;
     width: 60%;
 }
+mat-form-field{
+    width: 50%;
+}
 ion-card{
     margin-top:0px;
     margin-bottom: 0px;
