--- a/src/app/fill-order/fill-order.page.html
+++ b/src/app/fill-order/fill-order.page.html
@@ -21,8 +21,9 @@
             <ion-item lines="none">
                 <ion-item class="firstitem" lines="inset">
                     <ion-label position="floating">Item #1</ion-label>
-                    <ion-select placeholder="Select Item">
-                        <ion-select-option *ngFor="let item of items" value=item>{{item}}</ion-select-option>
+                    <ion-select interface="alert" [(ngModel)]="entry.item1" (ionChange)="selectChange(entry)" placeholder="Select Item">
+                        <ion-select-option>--None--</ion-select-option>
+                        <ion-select-option *ngFor="let item of items">{{item}}</ion-select-option>
                     </ion-select>
                 </ion-item>
                 <ion-item slot = "end" lines="inset">
@@ -33,7 +34,10 @@
             <ion-item lines="none">
                 <ion-item class="firstitem" lines="inset">
                     <ion-label position="floating">Item #2</ion-label>
-                    <ion-input [(ngModel)]="entry.item2" type="text"></ion-input>
+                   <ion-select interface="alert" [(ngModel)]="entry.item2" (ionChange)="selectChange(entry)" placeholder="Select Item">
+                        <ion-select-option>--None--</ion-select-option>
+                        <ion-select-option *ngFor="let item of items">{{item}}</ion-select-option>
+                    </ion-select>
                 </ion-item>
                 <ion-item slot = "end" lines="inset"> 
                     <ion-label position="floating">Cost #2 (Rs)</ion-label>
